@@ -535,22 +535,34 @@ WIDGET_DEFAULT = {
         "font_offset_vertical": 0,
         "display_size": 150,
         "show_yaw_angle_reading": True,
+        "yaw_angle_offset_x": 0.5,
+        "yaw_angle_offset_y": 0.7,
+        "font_color_yaw_angle": "#FFFFFF",
+        "show_slip_angle_reading": False,
+        "slip_angle_offset_x": 0.5,
+        "slip_angle_offset_y": 0.8,
+        "font_color_slip_angle": "#FFFFFF",
         "show_degree_sign": True,
-        "font_color": "#FFFFFF",
+        "decimal_places": 0,
         "show_background": False,
         "bkg_color": "#222222",
         "show_circle_background": True,
         "bkg_color_circle": "#CC222222",
-        "show_direction_line": True,
-        "direction_line_head_scale": 0.9,
-        "direction_line_tail_scale": 0.2,
-        "direction_line_width": 3,
-        "direction_line_color": "#CCFF2200",
         "show_yaw_line": True,
         "yaw_line_head_scale": 0.9,
         "yaw_line_tail_scale": 0.2,
         "yaw_line_width": 3,
         "yaw_line_color": "#CC22FF00",
+        "show_direction_line": True,
+        "direction_line_head_scale": 0.9,
+        "direction_line_tail_scale": 0.2,
+        "direction_line_width": 3,
+        "direction_line_color": "#CCFF2200",
+        "show_slip_angle_line": True,
+        "slip_angle_line_head_scale": 0.7,
+        "slip_angle_line_tail_scale": 0.2,
+        "slip_angle_line_width": 3,
+        "slip_angle_line_color": "#CCFFFF00",
         "show_dot": True,
         "dot_size": 8,
         "dot_color": "#FFFFFF",
